Implement Kubernetes deployment for CRM microservices
- Added Kubernetes manifests for deploying the CRM microservices, including Auth Service, Tenant Service, Users Service, and API Gateway.
- Configured services, deployments, and persistent storage for PostgreSQL and Redis.
- Implemented Horizontal Pod Autoscalers (HPA) for scaling based on CPU and memory utilization.
- Created a Kustomization file for managing the deployment resources.
- Included setup and teardown scripts for Minikube, along with health check and build scripts for Docker images.
- Established a namespace for resource isolation and organization within the Kubernetes cluster.